# qremergencias-ws/src/main/java/ar/com/utn/proyecto/qremergencias/ws/controller/EmergencyDataController.java
@@ -9,6 +9,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PatchMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -33,6 +34,13 @@ public class EmergencyDataController {
     public void createEmergencyData(@Valid @RequestBody final EmergencyDataDTO emergencyDataDTO,
                        @AuthenticationPrincipal final UserFront user) {
         service.save(user, emergencyDataDTO);
+    }
+
+    @PatchMapping
+    @ResponseStatus(HttpStatus.OK)
+    public void updateEmergencyData(@Valid @RequestBody final EmergencyDataDTO emergencyDataDTO,
+                                    @AuthenticationPrincipal final UserFront user) {
+        service.update(user, emergencyDataDTO);
     }
 
     @GetMapping
